5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1595_1015.log
== TEST (2019-03-26 16:48:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

min(var1, var2, var3)
print(min)
max(var1, var2, var3)
print(max
var_inter()

-- ERROR:
File "XXXX", line 13
    var_inter()
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:48:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

min(var1, var2, var3)
print(min)
max(var1, var2, var3)
print(max)
var_inter()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    var_inter()
NameError: name 'var_inter' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

min(var1, var2, var3)
print(min)
max(var1, var2, var3)
print(max)
var_inter(var1+var2+var3)-min-max

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    var_inter(var1+var2+var3)-min-max
NameError: name 'var_inter' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

min(var1, var2, var3)
print(min)
max(var1, var2, var3)
print(max)
var_inter((var1+var2+var3)-min-max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    var_inter((var1+var2+var3)-min-max)
NameError: name 'var_inter' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

min(var1, var2, var3)
print(min)
max(var1, var2, var3)
print(max)
var_inter = ((var1+var2+var3)-min-max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    var_inter = ((var1+var2+var3)-min-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

min(var1, var2, var3)
print(min)
max(var1, var2, var3)
print(max)


-- OUTPUT:
<built-in function min>
<built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

(min(var1, var2, var3))
print(min)
max(var1, var2, var3)
print(max)


-- OUTPUT:
<built-in function min>
<built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:28:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

print(min(var1, var2, var3)
print(max(var1, var2, var3)


-- ERROR:
File "XXXX", line 10
    print(max(var1, var2, var3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:29:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))

print(min(var1, var2, var3))
print(max(var1, var2, var3))


-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:34:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
valor_inter = (var1+var2+var3)-min-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_inter = (var1+var2+var3)-min-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:34:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
valor_inter = (var1+var2+var3)-min-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_inter = (var1+var2+var3)-min-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:35:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
valor_inter = (((var1+var2+var3)-min)-max)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_inter = (((var1+var2+var3)-min)-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:37:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
valor_inter = (var1+var2+var3-min)-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_inter = (var1+var2+var3-min)-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:37:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
valor_inter = int(var1+var2+var3-min)-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_inter = int(var1+var2+var3-min)-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:40:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
var4 = var1+var2+var3
valor_inter= var4-min-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_inter= var4-min-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:41:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
var4 = var1+var2+var3
valor_inter= var4-min-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_inter= var4-min-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:41:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
var4 = var1+var2+var3
valor_inter= var4-min-max

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_inter= var4-min-max
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:41:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
var4 = var1+var2+var3
valor_inter= ((var4-min)-max)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_inter= ((var4-min)-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
valor_inter = (((var1+var2+var3)-min)-max)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor_inter = (((var1+var2+var3)-min)-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
var4 = (var1+var2+var3)
var5 = (var4-min)
var6 = (var5-max)
valor_inter = (var6)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var5 = (var4-min)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
valor_inter = ((var1+var2+var3)-menor-maior)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
valor_inter = ((var1+var2+var3)-menor-maior)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
valor_inter = (((var1+var2+var3)-menor)-maior)

print(min(var1, var2, var3))
print(max(var1, var2, var3))
print(valor_inter)


-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
valor_inter = (((var1+var2+var3)-menor)-maior)

print(min(var1, var2, var3))
print(valor_inter)
print(max(var1, var2, var3))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
valor_inter = (((var1+var2+var3)-menor)-maior)

print(min(var1, var2, var3))
print(valor_inter)
print(max(var1, var2, var3))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:48:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = int(input("Digite um numero: "))
var2 = int(input("Digite um numero: "))
var3 = int(input("Digite um numero: "))
menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
valor_inter = (((var1+var2+var3)-menor)-maior)

print(min(var1, var2, var3))
print(valor_inter)
print(max(var1, var2, var3))


-- EXECUTION TIME:
0.143454
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
